<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        android:text="Phone Usage"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="56dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:text="Today"
        android:gravity="center_vertical"
        android:layout_marginRight="15dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_height="56dp" />
    
    <TextView
        android:id="@+id/phone_usgae"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:paddingLeft="25dp"
        android:gravity="center"
        android:paddingRight="15dp"
        android:layout_below="@id/header"
        android:textColor="@color/black"
        android:text="@string/total_phone_active"
        android:layout_height="56dp" />

    <TextView
        android:id="@+id/phone_usgae_value"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:textSize="16sp"
        android:gravity="center_vertical|right"
        android:layout_marginRight="25dp"
        android:layout_toRightOf="@id/phone_usgae"
        android:layout_below="@id/header"
        android:textColor="@color/black"
        android:text=" 5 hrs"
        android:fontFamily="sans-serif-bold"
        android:layout_height="56dp" />

    <TextView
        android:id="@+id/lock_unlock"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:paddingLeft="25dp"
        android:gravity="center"
        android:paddingRight="15dp"
        android:layout_below="@id/phone_usgae"
        android:textColor="@color/black"
        android:text="@string/total_phone_locked"
        android:layout_height="56dp" />

    <TextView
        android:id="@+id/lock_unlock_value"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:textSize="16sp"
        android:gravity="center_vertical|right"
        android:layout_marginRight="25dp"
        android:layout_toRightOf="@id/lock_unlock"
        android:textColor="@color/black"
        android:layout_below="@id/phone_usgae_value"
        android:text=" 5 hrs"
        android:fontFamily="sans-serif-bold"
        android:layout_height="56dp" />

    <TextView
        android:id="@+id/class_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lock_unlock"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:paddingLeft="25dp"
        android:text="@string/app_classification"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="Comming Soon"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"/>



</RelativeLayout>